[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-complete"
version = "0.1.0"
description = "Small PyTorch language-modeling experiments from scratch RNNs toward LLM concepts."
requires-python = ">=3.10"
dependencies = [
    "torch",
    "tqdm",
]

[project.scripts]
neural-complete = "neural_complete.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
